[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "echo-server-copy"
path = "bin/echo-server-copy.rs"

[[bin]]
name = "echo-client-copy"
path = "bin/echo-client-copy.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
mini-redis = "0.4.1"
bytes = "1.5.0"
